# RL-math-reasoning

./: .env.example  .gitignore  AGENTS.md  README.md  download_models.ipynb  pyproject.toml
configs/methods/: cot.yaml  grpo-0.6b.yaml  grpo-1.7b.yaml  grpo.yaml  ppo.yaml  rloo-0.6b.yaml  rloo-1.7b.yaml  rloo.yaml
configs/models/: qwen3-0.6b.yaml  qwen3-1.7b.yaml  qwen3-4b.yaml
outputs/checkpoints/: training_results.json
outputs/results/: Qwen3-0.6B_CoT_eval.json  Qwen3-0.6B_GRPO_eval.json  Qwen3-0.6B_RLOO_eval.json  Qwen3-1.7B_CoT_eval.json  Qwen3-1.7B_GRPO_eval.json  Qwen3-1.7B_RLOO_eval.json  Qwen3-4B_CoT_eval.json  Qwen3-4B_GRPO_eval.json  Qwen3-4B_RLOO_eval.json
scripts/: __init__.py  evaluate.py  run_all.py  run_evaluation.py  run_training.py  train.py  train_distributed.sh  visualize.py
src/: __init__.py
src/data/: __init__.py  gsm8k.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/methods/: __init__.py  base.py  cot.py  grpo.py  ppo.py  rloo.py
src/models/: loader.py
src/rewards/: __init__.py  math_rewards.py
src/utils/: __init__.py
