[project]
name = "grpo-math"
version = "0.1.0"
description = "Compare CoT, PPO, GRPO on math reasoning with Qwen3 models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.4.0",
    "trl==0.29.1",
    "wandb>=0.25.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
